--- a/css/style.css
+++ b/css/style.css
@@ -25,4 +25,9 @@ header{
     text-align: center;
     vertical-align: middle;
     line-height: 120px ;
+    cursor: pointer;;
+}
+
+.bkg-color{
+    background-color: lightgreen;
 }
