--- a/css/style.css
+++ b/css/style.css
@@ -18,16 +18,29 @@ header{
     justify-content: center;
 }
 .box{
-    height: 120px;
-    width: 120px;
+
     background-color: lightcoral;
     border: 5px solid lightgoldenrodyellow;
     text-align: center;
     vertical-align: middle;
-    line-height: 120px ;
+
     cursor: pointer;;
 }
-
+.box-100{
+    height: 120px;
+    width: 120px;
+    line-height: 120px ;
+}
+.box-81{
+    height: 133px;
+    width: 133px;
+    line-height: 133px ;
+}
+.box-49{
+    height: 171px;
+    width: 171px;
+    line-height: 171px ;
+}
 .bkg-color{
     background-color: lightgreen;
 }
