EDIT- box height widths

--- a/css/style.css
+++ b/css/style.css
@@ -7,39 +7,48 @@
 header{
     background-color: lightblue;
     padding: 40px 0;
+    text-align: center;
+}
+main{
+    background-color: lightblue;
 }
 
 
 .my-container{
-    width: 1200px;
+    width: 500px;
+    height: 500px;
     margin: auto;
+}
+.row{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    height: 100%;
+    width: 100%;
 }
 .box{
-
+    
     background-color: lightcoral;
     border: 5px solid lightgoldenrodyellow;
     text-align: center;
     vertical-align: middle;
-
-    cursor: pointer;;
+    cursor: pointer;
+    
 }
 .box-100{
-    height: 120px;
-    width: 120px;
-    line-height: 120px ;
+    height: calc(100% / 10);
+    width: calc(100% / 10);
+    line-height: 50px;
 }
 .box-81{
-    height: 133px;
-    width: 133px;
-    line-height: 133px ;
+    height: calc(100% / 9);
+    width: calc(100% / 9);
+    line-height: 55px;
 }
 .box-49{
-    height: 171px;
-    width: 171px;
-    line-height: 171px ;
+    height: calc(100% / 7);
+    width: calc(100% / 7);
+    line-height: 71px;
 }
 .bkg-color{
     background-color: lightgreen;
